# ameyanagi-template

./: ACKNOWLEDGEMENT.md  CODE_OF_CONDUCT.md  COPYRIGHT.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  cargo-generate.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit_on_push.yml  ci.yml  deny_warnings.yml  dependencies.yml  pr_checks.yml  rust_auto_format.yml  update_labels.yml  validate_auto-approve_dependabot.yml
