[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
authors = ["{{author}} <{{email}}>"]
rust-version = "1.81"
description = "{{project-descprition}}"
license = "MIT OR Apache-2.0"
repository = "https://github.com/{{gh-username}}/{{project-name}}"
homepage = "https://github.com/{{gh-username}}/{{project-name}}/tree/v0.1.0"
documentation = "https://docs.rs/{{gh-username}}/{{project-name}}/0.1.0"
# keywords = ["chemisty", "parser"]
# categories = ["Science", "Parsing Tools"] #TODO
readme = "README.md"
include = [
  "**/*.rs",
  # "**/*.pest",
  "Cargo.toml",
  "CHANGELOG.md",
  "CODE_OF_CONDUCT.md",
  "COPYRIGHT.md",
  "LICENSE-*",
  "README.md",
  # "SECURITY.md",
]
resolver = "2"
publish = true

[badges]
is-it-maintained-issue-resolution = { repository = "{{gh-username}}/{{project-name}}" }
is-it-maintained-open-issues = { repository = "{{gh-username}}/{{project-name}}" }
maintenance = { status = "experimental" }                                               # This may differ between branches.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# once_cell = "1.19.0"
# pest = "2.7.7"
# pest_derive = "2.7.7"

[dev-dependencies]
# approx = "0.5.1"
